--- a/style.css
+++ b/style.css
@@ -18,15 +18,18 @@
   margin: 40px auto;
   padding: 50px;
   width: 1000px;
-  height: 1200px;
+  height: 1100px;
   background: linear-gradient(45deg, #eaeaea, #efefef);
   box-shadow: 10px 5px 35px #929799;
 }
 
 .main {
+  width: 100%;
+  height: 900px;
+  margin: 0 auto;
   display: flex;
-  flex-flow: column wrap;
   align-content: space-between;
+  flex-flow: column wrap;
 }
 
 
@@ -34,16 +37,19 @@
 /* MY-NAME */
 
 .article {
-  width: calc(50% - 50px);
+  width: calc(50% - 20px);
   height: auto;
-  margin: 0 0 60px 0;
+  margin: 0 0 30px 0;
   background-color: var(--white);
+  border-radius: 15px;
+  padding: 10px 25px 20px 25px;
 }
 
 .my-name {
   position: relative;
   text-align: center;
   background-color: transparent;
+  padding: 0;
 }
 
 .my-name__avatar {
@@ -61,9 +67,9 @@
 .my-name__name {
   margin: 210px 0 0 0;
   width: 100%;
-  height: 210px;
+  height: 200px;
   background-color: var(--orange);
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .h1-title {
@@ -92,7 +98,7 @@
   font-size: 26px;
   font-weight: 700;
   color: var(--orange);
-  line-height: 3;
+  line-height: 2.2;
 }
 
 .contacts__item_bold {
@@ -104,3 +110,11 @@
   padding: 0 0 20px 0;
 }
 
+
+
+/* SKILLS */
+
+ul {
+  list-style-type: square;
+  padding: 0 0 0 15px;
+}
