--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@
   margin: 40px auto;
   padding: 50px;
   width: 1000px;
-  height: 1100px;
+  height: 1200px;
   background: linear-gradient(45deg, #eaeaea, #efefef);
   box-shadow: 10px 5px 35px #929799;
 }
 
 .main {
   width: 100%;
-  height: 900px;
+  height: 1000px;
   margin: 0 auto;
   display: flex;
   align-content: space-between;
@@ -118,3 +118,8 @@ ul {
   list-style-type: square;
   padding: 0 0 0 15px;
 }
+
+
+
+/* FOOTER */
+
